k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: blend-backend
  labels:
    name: blend-backend
    app: blend-services
